[metadata]
name = md-anchors
version = attr: mdanchors.__version__
author = LeMinaw
author_email = leminaw@gmail.com
description = Tiny lib to work with Markdown / CommonMark anchors.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/LeMinaw/md-anchors
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5

# Tox configuration

[tox:tox]
envlist = py35, py36, py37
isolated_build = True

[testenv]
deps =
    pylint
    coverage
    pytest
commands =
    pylint mdanchors
    pylint tests --rcfile=tests/.pylintrc
    coverage run -m pytest
    coverage report

# GitHub actions configuration for tox-gh-actions

[gh-actions]
python =
    3.5: py35
    3.6: py36
    3.7: py37
